fixing scrollbar settings and styling them

--- a/styles/lhs.css
+++ b/styles/lhs.css
@@ -10,6 +10,8 @@
   display: flex;
   justify-content: space-between;
   border: 1px solid var(--color-primary-dark);
+  scrollbar-color: var(--color-accent) var(--color-primary);
+  overflow-y: auto;
 }
 
 /* Style the buttons inside the tab */
@@ -65,6 +67,12 @@
   backdrop-filter: blur(10px);
   border-top: none;
   overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.tab-content::-webkit-scrollbar {
+  display: none;
 }
 
 a.active-content {
